--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,7 @@
 [env:esp12e]
 platform = espressif8266
 board = esp12e
+monitor_speed = 115200
+
 framework = arduino
 lib_deps = mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.7.0
