--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif8266
 board = esp12e
 monitor_speed = 115200
-
 framework = arduino
-lib_deps = mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.7.0
+lib_deps = 
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.7.0
+	bluedot-arduino/BlueDot BME280 Library@^1.0.9
+	bertmelis/DHT@^1.0.1
