--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ framework = arduino
 lib_deps = 
 	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.7.0
 	bluedot-arduino/BlueDot BME280 Library@^1.0.9
-	bertmelis/DHT@^1.0.1
+	jsc/Ticker@^2.0.0
+	beegee-tokyo/DHT sensor library for ESPx@^1.18
