implemenentation of new sensors

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	bluedot-arduino/BlueDot BME280 Library@^1.0.9
 	jsc/Ticker@^2.0.0
 	beegee-tokyo/DHT sensor library for ESPx@^1.18
+	paulstoffregen/OneWire@^2.3.6
+	milesburton/DallasTemperature@^3.9.1
