--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	beegee-tokyo/DHT sensor library for ESPx@^1.18
 	paulstoffregen/OneWire@^2.3.6
 	milesburton/DallasTemperature@^3.9.1
+	witnessmenow/UniversalTelegramBot@^1.3.0
+	bblanchon/ArduinoJson@^6.18.5
